--- a/cards.html
+++ b/cards.html
@@ -65,45 +65,44 @@
     <form class="newcardform" id="newcardform">
         <fieldset>
             <legend>New Card</legend>
-                <div class="form line">
-                    <label for="name">Name: </label>
-                    <input type="text" name="name" id="name" required>
+                <div class="formline">
+                    <label class="two" for="name">Name: </label>
+                    <input class="box" type="text" name="name" id="name" required>
                 </div>
-                <div class="form line">
-                    <label for="DOB">DOB: </label>
-                    <input type="text" name="DOB" id="DOB" required>
+                <div class="formline">
+                    <label class="two" for="DOB">DOB: </label>
+                    <input class="box" type="text" name="DOB" id="DOB" required>
                 </div>
-                <div class="form line">
-                    <label for="SEX">SEX: </label>
-                    <input type="text" name="SEX" id="SEX" required>
+                <div class="formline">
+                    <label class="two" for="SEX">SEX: </label>
+                    <input class="box" type="text" name="SEX" id="SEX" required>
                 </div>
-                <div class="form line">
-                    <label for="HGT">HGT: </label>
-                    <input type="text" name="HGT" id="HGT" required>
+                <div class="formline">
+                    <label class="two" for="HGT">HGT: </label>
+                    <input class="box" type="text" name="HGT" id="HGT" required>
                 </div>
-                <div class="form line">
-                    <label for="MASS">MASS: </label>
-                    <input type="text" name="MASS" id="MASS" required>
+                <div class="formline">
+                    <label class="two" for="MASS">MASS: </label>
+                    <input class="box" type="text" name="MASS" id="MASS" required>
                 </div>
-                <div class="form line">
-                    <label for="EYES">EYES: </label>
-                    <input type="text" name="EYES" id="EYES" required>
+                <div class="formline">
+                    <label class="two" for="EYES">EYES: </label>
+                    <input class="box" type="text" name="EYES" id="EYES" required>
                 </div>
-                <div class="form line">
-                    <label for="HAIR">HAIR: </label>
-                    <input type="text" name="HAIR" id="HAIR" required>
+                <div class="formline">
+                    <label class="two" for="HAIR">HAIR: </label>
+                    <input class="box" type="text" name="HAIR" id="HAIR" required>
                 </div>
-                <div class="form line">
-                    <label for="image">Image: </label>
+                <!--<div class="formline">
+                    <label class="two" for="image">Image: </label>
                     <input type="file" name="image" id="image" required>
+                </div>-->
+                <div class="formline">
+                    <input class="button" type="submit" value="Create">
                 </div>
         </fieldset>
-        <div class="formline">
-            <input type="submit" value="Add!">
-        </div>
 
     </form>
-   
 </body>
 
 <footer>
