almost done just trying to get new card to work

--- a/cards.html
+++ b/cards.html
@@ -62,7 +62,7 @@
     </div>
 
 </section>
-    <form class="newcardform" id="newcardform">
+    <form class="newcardform" id="newCardForm">
         <fieldset>
             <legend>New Card</legend>
                 <div class="formline">
